# jinguzhou

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  jinguzhou.example.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
assets/: README.md
charts/jinguzhou/: Chart.yaml  values.yaml
charts/jinguzhou/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
docs/: AGENT_TOOL_SECURITY.md  APPROVALS.md  AUDIT_SPEC.md  DEVELOPER_SETUP.md  DEVELOPMENT_PLAN.md  GITHUB_METADATA.md  INDEX.md  LANGCHAIN_TOOL_POLICY.md  LLAMAINDEX_TOOL_POLICY.md  MCP_TOOL_SECURITY.md  OPENAI_AGENTS_TOOL_POLICY.md  OPENAI_COMPATIBLE_PROXY.md  POLICY_SPEC.md  POSTGRES_AUDIT_BACKEND.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.3.0-alpha.md  RELEASE_NOTES_v0.3.0-beta.md  RELEASE_NOTES_v0.3.0.md  ROADMAP.md  UPGRADE_BACKLOG.md  V0.2_RELEASE_PLAN.md  V0.3_ALPHA_PLAN.md  V0.3_BETA_PLAN.md  V0.3_RELEASE_PLAN.md  VALIDATION.md
examples/agent-tool-security/: README.md
examples/dev_quickstart/: README.md  jinguzhou.yaml
examples/dev_quickstart/rules/: local_policy.yaml
examples/langchain-tool-policy/: README.md  demo.py
examples/llamaindex-tool-policy/: README.md  demo.py
examples/local_agent_tool_guard/: README.md
examples/mcp-tool-security/: README.md  demo.py
examples/openai-agents-tool-policy/: README.md  demo.py
examples/openai-compatible-proxy/: README.md
examples/openai_proxy/: README.md
examples/validation/: README.md  run_validation.py
rules/: baseline.yaml  privacy.yaml  prompt_injection.yaml  tool_database_access.yaml  tool_file_access.yaml  tool_network_access.yaml  tool_use.yaml
scripts/: validate_release.py
src/jinguzhou/: __init__.py  cli.py  config.py  init_project.py
src/jinguzhou/adapters/: __init__.py  base.py  llamaindex.py  mcp.py  openai_agents.py  registry.py
src/jinguzhou/approvals/: pending.py  tokens.py
src/jinguzhou/audit/: events.py  logger.py  postgres.py  query.py  redaction.py
src/jinguzhou/detectors/: __init__.py  keywords.py  pii.py  prompt_injection.py  regex.py
src/jinguzhou/gateway/: app.py  middleware.py  runtime.py  schemas.py
src/jinguzhou/guards/: __init__.py  input_guard.py  output_guard.py  tool_guard.py
src/jinguzhou/integrations/: __init__.py  langchain.py
src/jinguzhou/policy/: engine.py  extractors.py  loader.py  matchers.py  models.py
src/jinguzhou/providers/: base.py  openai_compatible.py
src/jinguzhou/tools/: __init__.py  adapters.py
tests/: test_approvals.py  test_audit_logger.py  test_cli.py  test_config.py  test_examples.py  test_extractors.py  test_gateway.py  test_langchain_integration.py  test_llamaindex_adapter.py  test_mcp_adapter.py  test_openai_agents_adapter.py  test_policy_engine.py  test_postgres_audit.py  test_tool_adapters.py  test_tool_guard.py
